--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
-name: SkFind
+name: SkFinder
 version: '${version}'
-main: me.asleepp.skfind.SkFind
+main: me.asleepp.skfinder.SkFinder
 api-version: '1.20'
 
 commands:
